k8s/deployment-prod.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ${CICD_GIT_REPO_NAME}-prod
  labels:
    app.kubernetes.io/name: prod
    app.kubernetes.io/instance: prod
---
# Service - next-service
apiVersion: v1
kind: Service
metadata:
  labels:
    run: next-prod
  name: next-service-prod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: next-prod
  sessionAffinity: None
  type: ClusterIP
---
# Ingress - ingress-prod
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    cert-manager.io/issuer: "letsencrypt-prod"
  generation: 2
  name: ingress-prod
spec:
  rules:
  - host: ${CICD_GIT_REPO_NAME}.binpar.cloud
    http:
      paths:
      - backend:
          serviceName: next-service-prod
          servicePort: 80
        path: /
  tls:
  - hosts:
    - ${CICD_GIT_REPO_NAME}.binpar.cloud
    secretName: ${CICD_GIT_REPO_NAME}-cert-prod
---
# Deploy - next-deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: next-prod
  name: next-deploy-prod
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: next-prod
  template:
    metadata:
      labels:
        run: next-prod
    spec:
      containers:
      - image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
        name: next-prod
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 80
            scheme: HTTP
          initialDelaySeconds: 120
          failureThreshold: 2
          timeoutSeconds: 5
          periodSeconds: 60
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "1024Mi"
            cpu: "950m"
